fix some layout issues

--- a/nilges/themes/greensteel/static/css/style.css
+++ b/nilges/themes/greensteel/static/css/style.css
@@ -26,7 +26,7 @@ body {
     margin: 0;
     font-family: var(--fontFamily);
     font-weight: var(--fontWeight);
-    background-color: var(--colorBackground);
+    background-color: var(--colorBackgroundSecondary);
 }
 
 img {
@@ -85,6 +85,7 @@ pre > code {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
     font-size: 36px;
     font-family: var(--titleFont);
@@ -116,6 +117,7 @@ pre > code {
 }
 
 .mainContent {
+    min-width: 0;
     color: #FFFFFF;
     background-color: var(--colorBackgroundSecondary);
     padding: 10px;
@@ -128,6 +130,11 @@ pre > code {
 
 .mainContent a:hover {
     color: var(--colorLinkHover); 
+}
+
+.mainContent img {
+    max-height: 300px;
+    max-width: 80%;
 }
 
 .sidebarLink {
@@ -155,7 +162,7 @@ pre > code {
 
 /* Sad attempt at responsive design */
 
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 800px){
     .pageTitle {
         margin: 0;
         font-size: 36px;
@@ -181,7 +188,7 @@ pre > code {
     }
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 800px){
     .pageTitle {
         text-align: center;
         font-size: 36px;
